<resources>
    <string name="app_name">BackPackTrack II</string>
    <string name="app_description">Continuously record your location, without draining your battery</string>
    <string name="title_action">Actions</string>
    <string name="title_privacy">Privacy mode</string>
    <string name="title_edit">Manage waypoints</string>
    <string name="title_share_gpx">Share GPX file</string>
    <string name="title_share_kml">Share KML file</string>
    <string name="title_upload_gpx">Upload GPX file</string>
    <string name="title_location_history">Location history</string>
    <string name="title_activity_history">Activity history</string>
    <string name="title_step_history">Walk history</string>
    <string name="title_weather_history">Weather history</string>
    <string name="title_weather_forecast">Weather forecast</string>
    <string name="title_loc_settings">Location settings</string>
    <string name="title_useful_links">Useful links</string>
    <string name="title_geocode">Geocode address</string>
    <string name="title_rgeocode">Reverse geocode location</string>
    <string name="title_app_settings">Settings</string>
    <string name="title_tracking">Location tracking</string>
    <string name="title_enabled">Tracking enabled</string>
    <string name="title_use_network">Use network provider</string>
    <string name="title_use_gps">Use GPS provider</string>
    <string name="title_interval">Tracking interval: %s seconds</string>
    <string name="title_altitude">Altitude preferred</string>
    <string name="title_tp_accuracy">Preferred trackpoint accuracy: %s meters</string>
    <string name="title_wp_accuracy">Preferred waypoint accuracy: %s meters</string>
    <string name="title_timeout">Location time-out: %s seconds</string>
    <string name="title_check_time">Check satellites: %s seconds</string>
    <string name="title_check_sat">Required satellites: %s</string>
    <string name="title_inaccurate">Filter inaccurate locations: %s meters</string>
    <string name="title_nearby">Filter nearby locations: %s meters</string>
    <string name="title_mintime">Minimum update time: %s seconds</string>
    <string name="title_mindist">Minimum update distance: %s meters</string>
    <string name="title_passive">Passive locations</string>
    <string name="title_passive_enabled">Passive locations enabled</string>
    <string name="title_passive_bearing">Bearing change: %s degrees</string>
    <string name="title_passive_altitude">Altitude change: %s meters</string>
    <string name="title_altitude_settings">Altitude</string>
    <string name="title_altitude_avg">Moving average: %s samples</string>
    <string name="title_correction_header">EGM96 correction</string>
    <string name="title_correction_enabled">Correction enabled</string>
    <string name="title_correction_egm96">EGM96 license</string>
    <string name="title_altitude_header">Google elevation</string>
    <string name="title_altitude_waypoint">Google elevation for waypoints</string>
    <string name="title_altitude_trackpoint">Google elevation for trackpoints</string>
    <string name="title_altitude_google_terms">Powered by Google</string>
    <string name="title_pressure_header">Altitude from pressure</string>
    <string name="title_pressure_enabled">Use pressure to determine altitude</string>
    <string name="title_pressure_wait">Pressure averaging time: %s seconds</string>
    <string name="title_pressure_offset">Pressure calibration: %s hPa</string>
    <string name="title_pressure_test">Determine altitude for last location</string>
    <string name="title_pressure_maxage">Reference pressure max. age: %s minutes</string>
    <string name="title_pressure_maxdist">Reference pressure max. distance: %s km</string>
    <string name="title_pressure_invehicle">Use reference pressure in vehicle</string>
    <string name="title_auto">Automatic waypoints</string>
    <string name="title_auto_enabled">Enabled</string>
    <string name="title_auto_time">Min. stationary time: %s minutes</string>
    <string name="title_auto_distance">Max. stationary distance: %s meters</string>
    <string name="title_auto_still">Acquire location after becoming stationary</string>
    <string name="title_auto_duplicate">Prevent duplicates: check %s waypoints</string>
    <string name="title_recognition">Activity recognition</string>
    <string name="title_recognition_enabled">Activity recognition enabled</string>
    <string name="title_recognition_interval_still">Activity recognition still: %s seconds</string>
    <string name="title_recognition_interval_moving">Activity recognition moving: %s seconds</string>
    <string name="title_recognition_confidence">Activity recognition confidence: %s%%</string>
    <string name="title_recognition_tilting">Filter activity \'tilting\'</string>
    <string name="title_recognition_known">Replace activity \'unknown\'</string>
    <string name="title_recognition_unknown">Filter activity \'unknown\'</string>
    <string name="title_recognition_steps">Filter false steps</string>
    <string name="title_recognition_unknown_steps">Count steps for \'unknown\' activity</string>
    <string name="title_step_counter">Step counter</string>
    <string name="title_step_delta">Update: %s steps</string>
    <string name="title_step_size">Step size: %s centimeters</string>
    <string name="title_weight">Weight: %s kilogram</string>
    <string name="title_weather_settings">Weather</string>
    <string name="title_weather_enabled">Weather updates enabled</string>
    <string name="title_weather_api">Weather provider: %s</string>
    <string name="title_weather_interval">Weather fetch interval: %s minutes</string>
    <string name="title_weather_wakeup">Wakeup device to refresh</string>
    <string name="title_weather_gcm">Subscribe to weather push messages</string>
    <string name="title_weather_fio">Dark Sky</string>
    <string name="title_weather_apikey">API key: %s</string>
    <string name="title_weather_register">Register</string>
    <string name="title_weather_notification">Show weather notification</string>
    <string name="title_weather_rain_warning">Show rain warning notification: %s%%</string>
    <string name="title_weather_rain_sound">Rain warning ringtone</string>
    <string name="title_weather_rain_light">Rain warning lights</string>
    <string name="title_weather_alerts">Show weather alerts</string>
    <string name="title_weather_alerts_sound">Weather alerts sound</string>
    <string name="title_weather_guard">Weather notifications valid: %s minutes</string>
    <string name="title_weather_cache">Forecast cache: %s minutes</string>
    <string name="title_weather_tos">TOS</string>
    <string name="title_weather_poweredby" translatable="false">Powered by <a href="https://darksky.net/poweredby/">Dark Sky</a></string>
    <string name="title_blog">WordPress weblog</string>
    <string name="title_blogurl">URL: %s</string>
    <string name="title_blogid">ID: %s</string>
    <string name="title_bloguser">User name: %s</string>
    <string name="title_blogpwd">Password: %s</string>
    <string name="title_plugin">Plugin</string>
    <string name="title_lifeline">Lifeline</string>
    <string name="title_lifeline_enabled">Enabled</string>
    <string name="title_lifeline_interval">Metered update interval: %s minutes</string>
    <string name="title_lifeline_private_page">Private page</string>
    <string name="title_lifeline_public_page">Public page</string>
    <string name="title_lifeline_state" formatted="false">Unsent: %d Last: %s</string>
    <string name="title_units">Units</string>
    <string name="title_temperature">Temperature: %s</string>
    <string name="title_pressure">Pressure: %s</string>
    <string name="title_windspeed">Wind speed: %s</string>
    <string name="title_precipitation">Precipitation: %s</string>
    <string name="title_misc">Miscellaneous</string>
    <string name="title_graph_history">Graph history: %s days</string>
    <string name="title_wiki_baseurl">Wiki base URLs</string>
    <string name="title_wiki_radius">Wiki radius: %s km</string>
    <string name="title_wiki_results">Wiki results: %s</string>
    <string name="title_geoname_radius">Geoname radius: %s km</string>
    <string name="title_geoname_results">Geoname results: %s</string>
    <string name="title_search_cache">Search cache: %s days</string>
    <string name="title_connectivity_check_interval">Check connectivity interval: %s minutes</string>
    <string name="title_debug">Debug mode</string>
    <string name="title_logcat">Send logcat</string>
    <string name="title_info">Information</string>
    <string name="title_legend">Legend</string>
    <string name="title_version">Version</string>
    <string name="title_support">Support</string>
    <string name="title_author">Author</string>
    <string name="title_license">License</string>
    <string name="summary_privacy">Enable or disable location and weather updates</string>
    <string name="summary_edit">Use, add, change or delete waypoints</string>
    <string name="summary_share_gpx">Tap to write and share a GPX file\nLast share: %s</string>
    <string name="summary_share_kml">Tap to write and share a KML file\nLast share: %s</string>
    <string name="summary_upload_gpx">Tap to write and upload a GPX file to a WordPress weblog\nLast upload: %s</string>
    <string name="summary_location_history">Show the location history to verify everything works</string>
    <string name="summary_activity_history">Show the activity history to verify everything works</string>
    <string name="summary_step_history">Show the daily number of steps taken, distance walked and calories burned</string>
    <string name="summary_weather_history">Show local weather history</string>
    <string name="summary_weather_forecast">Show local weather forecast</string>
    <string name="summary_loc_settings">Tap to open the Android location settings</string>
    <string name="summary_useful_links">Links to information relevant to travelers</string>
    <string name="summary_interval">Try to acquire a new location every selected number of seconds</string>
    <string name="summary_altitude">Prefer less accurate locations with altitude information over more accurate locations without altitude information</string>
    <string name="summary_accuracy">Stop acquiring a location after a location with the selected accuracy has been acquired</string>
    <string name="summary_timeout">Always stop acquiring a location after the selected number of seconds</string>
    <string name="summary_check_time">Check the number of satellites after the selected number of seconds</string>
    <string name="summary_nearby">Filter locations closer than the selected number of meters to the last location, except when a location is more accurate than the last location</string>
    <string name="summary_author">Marcel Bokhorst (M66B)\nTap for details (will start the browser)</string>
    <string name="summary_license">GNU General Public License version 3\nTap for details (will start the browser)</string>
    <string name="title_track">Track name:</string>
    <string name="title_from">From date/time:</string>
    <string name="title_to">To date/time:</string>
    <string name="title_pick">Pick</string>
    <string name="header_distance">Dist.</string>
    <string name="header_steps">Steps</string>
    <string name="header_calories">kcal</string>
    <string name="header_percent">%</string>
    <string name="header_hpa">hPa</string>
    <string name="header_mm">mm</string>
    <string name="menu_share">Share</string>
    <string name="menu_time">Time</string>
    <string name="menu_geocode">Geocode</string>
    <string name="menu_hidden">Hidden</string>
    <string name="menu_wiki">Wiki search</string>
    <string name="menu_geoname">Geoname search</string>
    <string name="menu_delete">Delete</string>
</resources>