<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_time"
        android:title="@string/menu_time" />
    <item
        android:id="@+id/menu_geocode"
        android:title="@string/menu_geocode" />
    <item
        android:id="@+id/menu_wiki"
        android:title="@string/menu_wiki" />
    <item
        android:id="@+id/menu_geoname"
        android:title="@string/menu_geoname" />
    <item
        android:id="@+id/menu_proximity"
        android:checkable="true"
        android:title="" />
    <item
        android:id="@+id/menu_hidden"
        android:checkable="true"
        android:title="@string/menu_hidden" />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete" />
</menu>
