<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gvStep"
        android:layout_width="match_parent"
        android:layout_height="100dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/header_steps"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/header_distance"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/header_calories"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvStepHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" />

</LinearLayout>
