<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <Spinner
        android:id="@+id/spGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/listGraphName"
        android:entryValues="@array/listGraphValue" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/gvWeather"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="24dp">

            <ImageView
                android:id="@+id/ivViewport"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@android:drawable/ic_menu_day" />

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvHeaderTemperature"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderHumidity"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:text="@string/header_percent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderPressure"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:text="@string/header_hpa"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderWindSpeed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderPrecipitation"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="18dp"
            android:gravity="right"
            android:text="@string/header_mm"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvWeatherHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" />

</LinearLayout>
